NL-355 Reduce CONTRIBUTING.md to what CLAUDE.md does not own
Build, boundaries, TDD and comments were restated verbatim; they become
links, and Architecture decisions points at rule 8 rather than at ADR
0001 as the model.